# DCharVault

./: CMakeLists.txt  Main.qml  README.md  main.cpp
.github/workflows/: build.yml  codeql.yml
docs/: ARCHITECTURE.md  CORE_MODELS.md  VIEW_MODELS.md
model/: DatabaseManager.cpp  DatabaseManager.h  DiaryManager.cpp  DiaryManager.h  EncryptionManager.cpp  EncryptionManager.h  SessionManager.cpp  SessionManager.h
tests/: main_test.cpp  test_crypto.cpp  test_database.cpp
ui/android/: virtualKeyboardPad.qml
ui/common/: SettingsOverlay.qml  ThemeManager.qml  VaultPasswordField.qml  login.qml
ui/common/micro-elements/: DCharComboBox.qml  DCharSwitch.qml
ui/common/tabs-settings/: AppearanceTab.qml  SecurityTab.qml
ui/desktop/: EditorToolbar.qml  EditorView.qml  HomeView.qml  SidebarView.qml
viewmodel/: ClipboardSanitizer.cpp  ClipboardSanitizer.h  LoginViewModel.cpp  RichTextController.cpp  RichTextController.h  SecurePasswordInput.cpp  SecurePasswordInput.h  SessionViewModel.cpp  SessionViewModel.h  TextHighlighter.cpp  TextHighlighter.h
